@@ -22,6 +22,7 @@ Features:
 - customize prompt with "set prompt_on" and "set prompt_off" (by Andrew Fowlie)
 - "help help" now sends an email to the offpunk-users mailing-list
 - "links" command now display all links
+- new "blocked_link" object in theme. By default, blocked link are in red.
 Others:
 - In "lists", only consider files ending with .gmi (bug #46 by woffs)
 - support for new links color in gopher (by JMCS)
